fixed the book page, aligning the books and the shelf. Also found a bug where i couldn't select half of the blue fallen books, and the reason was because the invisible div container of the blue books was covering and made it unselectable.

--- a/html/books.css
+++ b/html/books.css
@@ -17,7 +17,7 @@ position: absolute;
 	left: 20px;
 	top: 65px;
 	background:url("images/my_room_big.png") repeat-x;
-	background-position: 0 -30px;
+	background-position: 0 -40px;
 	width: 1100px;
 	height: 630px;
 
@@ -34,11 +34,14 @@ position: absolute;
 #container {
 	position: absolute;
 	top: 10px;
-	left: 300px;
+	left: 100px;
 	width: 499px;
 	height: 499px;
 	margin: 0 auto;
 	background-image:url("images/closet_img.png");
+	-ms-transform: scale(1,0.95); /* IE 9 */
+    -webkit-transform: scale(1,0.95); /* Chrome, Safari, Opera */
+    transform: scale(1,0.95); /* Standard syntax */
 }
 
 /*====================Blue Books============================*/
@@ -48,7 +51,7 @@ position: absolute;
 	width: 480px;
 	height: 110px;
 	top: 10px;
-	left: 10px;
+	left: 200px;
 	margin: 0px;
 	padding: 0px;
 }
@@ -59,10 +62,10 @@ position: absolute;
 
 #b_books_transparent{
 	position: absolute;
-	top: 60px;
-	left: 10px;
-	width: 420px;
-	height: 110px;
+	top: 80px;
+	left: 120px;
+	width: 410px;
+	height: 90px;
 	margin: 0px;
 	padding: 0px;
 }
@@ -288,10 +291,10 @@ position: absolute;
 /*=====================Green Books===========================*/
 #g_books_transparent{
 	position: absolute;
-	width: 410px;
-	height: 100px;
-	top: 170px;
-	left: 10px;
+	width: 400px;
+	height: 90px;
+	top: 180px;
+	left: 120px;
 	padding-left: 10px;
 }
 
@@ -304,7 +307,7 @@ position: absolute;
 	width: 430px;
 	height: 110px;
 	top: 130px;
-	margin: 0px;
+	left: 200px;
 	padding-left: 10px;
 }	
 
@@ -526,10 +529,10 @@ position: absolute;
 /*=====================Red Books===========================*/
 #r_books_transparent{
 	position: absolute;
-	width: 410px;
-	height: 110px;
+	width: 400px;
+	height: 80px;
 	top: 270px;
-	left: 10px;
+	left: 120px;
 	padding-left: 10px;
 }
 
@@ -542,7 +545,7 @@ position: absolute;
 	width: 430px;
 	height: 110px;
 	top: 260px;
-	left: 10px;
+	left: 200px;
 	margin: 0px;
 	padding-left: 10px;
 }	
@@ -765,10 +768,10 @@ position: absolute;
 /*=====================Yellow Books===========================*/
 #y_books_transparent{
 	position: absolute;
-	width: 420px;
-	height: 110px;
-	top: 380px;
-	left: 10px;
+	width: 400px;
+	height: 90px;
+	top: 375px;
+	left: 120px;
 }
 
 #y_books_transparent li {
@@ -779,9 +782,9 @@ position: absolute;
 	position: absolute;
 	width: 430px;
 	height: 110px;
-	top: 400px;
+	top: 360px;
 	margin: 0px;
-	left: 10px;
+	left: 200px;
 
 }	
 
@@ -1007,8 +1010,8 @@ position: absolute;
 	width: 50px;
 	height: 50px;
 	background: red;
-	top: 40px;
-	left: 500px;
+	top: 100px;
+	left: 610px;
 
 	border-radius: 10px;
 	border: 2px solid #333;
@@ -1016,8 +1019,8 @@ position: absolute;
 
 #numbers1 {
 	position: absolute;
-	top: 50px;
-	left: 550px;
+	top: 110px;
+	left: 660px;
 	width: 210px;
 	height: 40px;
 }
@@ -1053,8 +1056,8 @@ position: absolute;
 	width: 50px;
 	height: 50px;
 	background: red;
-	top: 160px;
-	left: 500px;
+	top: 200px;
+	left: 610px;
 
 	border-radius: 10px;
 	border: 2px solid #333;
@@ -1062,8 +1065,8 @@ position: absolute;
 
 #numbers2 {
 	position: absolute;
-	top: 170px;
-	left: 550px;
+	top: 210px;
+	left: 660px;
 	width: 210px;
 	height: 40px;
 }
@@ -1100,8 +1103,8 @@ position: absolute;
 	width: 50px;
 	height: 50px;
 	background: red;
-	top: 290px;
-	left: 500px;
+	top: 300px;
+	left: 610px;
 
 	border-radius: 10px;
 	border: 2px solid #333;
@@ -1109,8 +1112,8 @@ position: absolute;
 
 #numbers3 {
 	position: absolute;
-	top: 300px;
-	left: 550px;
+	top: 310px;
+	left: 660px;
 	width: 210px;
 	height: 40px;
 }
@@ -1146,8 +1149,8 @@ position: absolute;
 	width: 50px;
 	height: 50px;
 	background: red;
-	top: 420px;
-	left: 500px;
+	top: 390px;
+	left: 610px;
 
 	border-radius: 10px;
 	border: 2px solid #333;
@@ -1155,8 +1158,8 @@ position: absolute;
 
 #numbers4 {
 	position: absolute;
-	top: 430px;
-	left: 550px;
+	top: 400px;
+	left: 660px;
 	width: 210px;
 	height: 40px;
 }
@@ -1196,29 +1199,29 @@ position: absolute;
 #b_books_guess{
 	position: absolute;
 	width: 300px;
-	top: 15px;
-	left: 500px;
+	top: 75px;
+	left: 610px;
 }
 
 #g_books_guess{
 	position: absolute;
 	width: 300px;
-	top: 135px;
-	left: 500px;
+	top: 175px;
+	left: 610px;
 }
 
 #r_books_guess{
 	position: absolute;
 	width: 300px;
-	top: 265px;
-	left: 500px;
+	top: 275px;
+	left: 610px;
 }
 
 #y_books_guess{
 	position: absolute;
 	width: 300px;
-	top: 395px;
-	left: 500px;
+	top: 365px;
+	left: 610px;
 }
 
 #guessMe1, #guessMe2, #guessMe3, #guessMe4 {
@@ -1235,20 +1238,22 @@ position: absolute;
 }
 
 #popUp{
+	position: absolute;
+	top: 30px;
+	left: 400px;
 	background: gray;
 	width: 300px;
 	height: 300px;
-	margin-top: 10px;	
-	margin-left: 50px;
 	float: left;
 	border-radius: 10px;
 }
 #score {
 	position: absolute;
-	top: 350px;
-	left: 100px;
-	width: 170px;
+	top: 360px;
+	left: 420px;
+	width: 270px;
 	height: 60px;
+	font-size: 1.3em;
 }
 
 #stars{
